--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
             <div class="nav-links-cont">
                 <ul>
-                    <li>Home</li>
-                    <li>Roome & Suites</li>
-                    <li>Pages</li>
-                    <li>News</li>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Roome & Suites</a></li>
+                    <li><a href="">Pages</a></li>
+                    <li><a href="">News</a></li>
                 </ul>
             </div>
 
