--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     
+
+<!-- NAVBAR -->
+<!-- NAVBAR -->
+<!-- NAVBAR -->
+<!-- NAVBAR -->
+<!-- NAVBAR -->
+
+
     <nav class="nav">
 
         <div class="logo">
@@ -30,9 +38,94 @@
 
         </div>
 
-
-
     </nav>
+
+
+
+
+
+<!-- FIRST SECTION -->
+<!-- FIRST SECTION -->
+<!-- FIRST SECTION -->
+<!-- FIRST SECTION -->
+<!-- FIRST SECTION -->
+<!-- FIRST SECTION -->
+<!-- FIRST SECTION -->
+
+
+
+
+<section class="f-section">
+
+
+    <div class="img-container">
+
+        <!-- <img src="assets/img/bedroom/main1.jpg" alt=""> -->
+
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
