--- a/index.html
+++ b/index.html
@@ -59,18 +59,40 @@
 
 
     <div class="img-container">
+        <img src="assets/img/bedroom/main1.jpg" alt="">
+    </div>
 
-        <!-- <img src="assets/img/bedroom/main1.jpg" alt=""> -->
-
-
+    <div class="text-container">
+        <h1>Book Your Dream Hotel <br> With Hoteler</h1>
     </div>
 
 
 
 
+    <div class="booking-bar">
+        <div class="booking-bar-container">
+
+            <div class="booking-bar-item">
+                <label for="check-in">Check In</label>
+                <input type="date" id="check-in">
+            </div>
+
+            <div class="booking-bar-item">
+                <label for="check-out">Check Out</label>
+                <input type="date" id="check-out">
+            </div>
+
+            <div class="booking-bar-item">
+                <label for="guests">Guests</label>
+                <input type="number" id="guests" placeholder="1">
+            </div>
+
+            <button class="booking-btn">Book Now</button>
+
+        </div>
 
 
-
+    </div>
 
 
 
