--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <title>Hotel</title>
 
     <link rel="stylesheet" href="assets/file/style.css">
+
+
+    <!-- FONT-LINKS -->
+    <!-- FONT-LINKS -->
+    <!-- FONT-LINKS -->
+    <!-- FONT-LINKS -->
+
+    <link href="https://fonts.cdnfonts.com/css/margesh" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/sageffine" rel="stylesheet">
+
+
+    <!-- SOURCE LINKS -->
+    <!-- SOURCE LINKS -->
+    <!-- SOURCE LINKS -->
+    <!-- SOURCE LINKS -->
+    <!-- SOURCE LINKS -->
+
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+                
 </head>
 <body>
     
@@ -77,17 +96,30 @@
                 <input type="date" id="check-in">
             </div>
 
+
+            <div class="booking-divider"></div>
+
+
             <div class="booking-bar-item">
                 <label for="check-out">Check Out</label>
                 <input type="date" id="check-out">
             </div>
 
+
+            <div class="booking-divider"></div>
+
+
             <div class="booking-bar-item">
                 <label for="guests">Guests</label>
-                <input type="number" id="guests" placeholder="1">
+                <select id="guests">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                </select>
             </div>
 
-            <button class="booking-btn">Book Now</button>
+            <button class="booking-btn">CHECK AVAILABILITY</button>
 
         </div>
 
@@ -147,8 +179,8 @@
 
 
 
-
-
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<script src="assets/file/app.js"></script>
 
 
 
