--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotel</title>
+    <title>Hoteler</title>
 
     <link rel="stylesheet" href="assets/file/style.css">
 
@@ -93,7 +93,9 @@
 
             <div class="booking-bar-item">
                 <label for="check-in">Check In</label>
-                <input type="date" id="check-in">
+                <!-- <input type="date" id="check-in"> -->
+                <input type="text" id="check-in" placeholder="Check-in date">
+
             </div>
 
 
@@ -102,7 +104,8 @@
 
             <div class="booking-bar-item">
                 <label for="check-out">Check Out</label>
-                <input type="date" id="check-out">
+                <!-- <input type="date" id="check-out"> -->
+                <input type="text" id="check-out" placeholder="Check-out date">
             </div>
 
 
@@ -116,38 +119,44 @@
                     <option value="2">2</option>
                     <option value="3">3</option>
                     <option value="4">4</option>
+                    <option value="5">5</option>
                 </select>
             </div>
 
-            <button class="booking-btn">CHECK AVAILABILITY</button>
+            <button class="booking-btn"><span>CHECK AVAILABILITY</span></button>
 
         </div>
 
 
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </section>
 
 
 
 
+<!-- SECOND SECTION -->
+<!-- SECOND SECTION -->
+<!-- SECOND SECTION -->
+<!-- SECOND SECTION -->
+<!-- SECOND SECTION -->
+<!-- SECOND SECTION -->
+
+
+<section class="s-section">
+
+    <div class="s-section-container">
+        <div class="s-section-heading">
+            <h1>What we offer</h1>
+            <p>Get Our Special Offer.</p>
+        </div>
+
+        <div class="cards-cont">
+            
+        </div>
+    </div>
+
+</section>
 
 
 
