--- a/index.html
+++ b/index.html
@@ -152,8 +152,36 @@
         </div>
 
         <div class="cards-cont">
-            
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/img/bedroom/room1.jpg" alt="">
+                </div>
+                <div class="card-text">
+                    <h1>Luxury Rooms</h1>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/img/bedroom/main2.jpg" alt="">
+                </div>
+                <div class="card-text">
+                    <h1>Couples Offer</h1>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-img">
+                    <img src="assets/img/bedroom/main3.jpg" alt="">
+                </div>
+                <div class="card-text">
+                    <h1>Buy One Get One Free</h1>
+                </div>
+            </div>
         </div>
+
+
+        
     </div>
 
 </section>
