--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
 
 
 <section class="s-section">
+        <div class="design-img1">        
+            <img src="assets/img/design1.png" alt="">
+        </div>
 
     <div class="s-section-container">
         <div class="s-section-heading">
@@ -368,26 +371,199 @@
 
     </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </section>
 
 
 
+<!-- THIRD SECTION -->
+<!-- THIRD SECTION -->
+<!-- THIRD SECTION -->
+<!-- THIRD SECTION -->
+<!-- THIRD SECTION -->
+
+    <section class="thr-section">
+
+        <div class="design-img2">
+            <img src="assets/img/desgin2.png" alt="">
+        </div>
+
+        <div class="service">
+            <div class="service-heading">
+                <h1>CUSTOMER SERVICE</h1>
+                
+                <p>Book your stay and <br> relax in luxury</p>
+            </div>
+
+
+            <div class="services-card-cont">
+
+                <div class="service-card">
+                    <div class="ser-card-img">
+                        <img src="assets/img/hotel Imgs/ser1.jpg" alt="">
+                    </div>
+                    <div class="ser-card-text">
+                        <h2>Junior Suite</h2>
+                        <p>$150/ Night</p>
+
+                        <div class="ser-divider"></div>
+
+                        <div class="ser-items">
+                            <div class="ser-item">
+                                <i class="fa-solid fa-person"></i>
+                                <p>1-2 Persons</p>
+                            </div>
+                            <div class="ser-item">
+                                <i class="fa-solid fa-utensils"></i>
+                                <p>Breakfast</p>
+                            </div>
+                            <div class="ser-item">
+                                <i class="fa-solid fa-person-swimming"></i>
+                                <p>Pool Access</p>
+                            </div>
+                            <div class="ser-item">
+                                <i class="fa-solid fa-wifi"></i>
+                                <p>Free Wi-Fi</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="service-card">
+                    <div class="ser-card-img">
+                        <img src="assets/img/hotel Imgs/ser2.jpg" alt="">
+                    </div>
+                    <div class="ser-card-text">
+                        <h2>Family Suite</h2>
+                        <p>$250/ Night</p>
+
+                        <div class="ser-divider"></div>
+
+                        <div class="ser-items">
+                            <div class="ser-item">
+                                <i class="fa-solid fa-person"></i>
+                                <p>4-8 Persons</p>
+                            </div>
+                            <div class="ser-item">
+                                <i class="fa-solid fa-utensils"></i>
+                                <p>Breakfast</p>
+                            </div>
+                            <div class="ser-item">
+                                <i class="fa-solid fa-person-swimming"></i>
+                                <p>Pool Access</p>
+                            </div>
+                            <div class="ser-item">
+                                <i class="fa-solid fa-wifi"></i>
+                                <p>Free Wi-Fi</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="service-card">
+                    <div class="ser-card-img">
+                        <img src="assets/img/hotel Imgs/ser3.jpg" alt="">
+                    </div>
+                    <div class="ser-card-text">
+                        <h2>Business Suite</h2>
+                        <p>$550/ Night</p>
+
+                        <div class="ser-divider"></div>
+
+                        <div class="ser-items">
+                            <div class="ser-item">
+                                <i class="fa-solid fa-person"></i>
+                                <p>5-7 Persons</p>
+                            </div>
+                            <div class="ser-item">
+                                <i class="fa-solid fa-utensils"></i>
+                                <p>Breakfast</p>
+                            </div>
+                            <div class="ser-item">
+                                <i class="fa-solid fa-person-swimming"></i>
+                                <p>Pool Access</p>
+                            </div>
+                            <div class="ser-item">
+                                <i class="fa-solid fa-wifi"></i>
+                                <p>Free Wi-Fi</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+
+        <!-- TESTIMONIAL -->
+        <!-- TESTIMONIAL -->
+        <!-- TESTIMONIAL -->
+        <!-- TESTIMONIAL -->
+        <!-- TESTIMONIAL -->
+
+
+
+        <div class="testimonial">
+
+            <div class="testimonial-heading">
+                <h1>TESTIMONIALS</h1>
+                <p>What our customers say</p>
+            </div>
+
+            <div class="testimonial-card-cont">
+
+                <div class="testimo-text">
+                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
+                </div>
+                <div class="testimo-id">
+                        <h2>Jenny Wilson</h2>
+                        <p>Business Owner</p>
+                </div>
+
+                <div class="testimo-img">
+                    <img src="assets/img/hotel Imgs/testimo.jpg" alt="">
+                    <img src="assets/img/hotel Imgs/testimo.jpg" alt="">
+                    <img src="assets/img/hotel Imgs/testimo.jpg" alt="">
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </section>
 
 
 
