--- a/index.html
+++ b/index.html
@@ -507,25 +507,40 @@
 
             <div class="testimonial-heading">
                 <h1>TESTIMONIALS</h1>
-                <p>What our customers say</p>
+                <p>Hear From Our Happy Guests</p>
             </div>
 
             <div class="testimonial-card-cont">
 
-                <div class="testimo-text">
-                    <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
-                </div>
-                <div class="testimo-id">
-                        <h2>Jenny Wilson</h2>
-                        <p>Business Owner</p>
+                <div class="testimonial-card">
+                    <div class="testi-card-id">
+                        <div class="testi-card-img">
+                            <img src="assets/img/Testimo img/person (1).jpg" alt="">
+                        </div>
+                        
+                        <h2>John Doe</h2>
+                    </div>
+
+                    <div class="testi-card-text">
+                        <p>"The hotel was amazing! The staff were friendly and the amenities were top-notch. I highly recommend it to anyone looking for a luxurious stay."</p>
+                        
+                        <div class="testi-rating">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star-half"></i>
+                        </div>
+
+                    </div>
                 </div>
 
-                <div class="testimo-img">
-                    <img src="assets/img/hotel Imgs/testimo.jpg" alt="">
-                    <img src="assets/img/hotel Imgs/testimo.jpg" alt="">
-                    <img src="assets/img/hotel Imgs/testimo.jpg" alt="">
-                </div>
+
+
+
+
             </div>
+
         </div>
 
 
