--- a/index.html
+++ b/index.html
@@ -786,11 +786,59 @@
         <div class="team-member">
 
             <div class="team-heading">
-                <h1>Hoteler best menus</h1>
-                <p>Unique Specialty Foods</p>
+                <h1>TEAM MEMBER</h1>
+                <p>Check Out Our Expert <br> Hoteler Members</p>
             </div>
 
+            <div class="team-card-cont">
 
+                <div class="team-card">
+                    <div class="member-img">
+                        <img src="assets/img/team/team-1.jpg" alt="">
+                    </div>
+
+                    <div class="member-detail">
+                        <h2>Michael Dean</h2>
+                        <p>CEO & Founder</p>
+                    </div>
+                </div>
+
+                <div class="team-card">
+                    <div class="member-img">
+                        <img src="assets/img/team/team-2.jpg" alt="">
+                    </div>
+
+                    <div class="member-detail">
+                        <h2>Frank Burton</h2>
+                        <p>Kitchen Manager</p>
+                    </div>
+                </div>
+
+                <div class="team-card">
+                    <div class="member-img">
+                        <img src="assets/img/team/team-3.jpg" alt="">
+                    </div>
+
+                    <div class="member-detail">
+                        <h2>Mya Mullins</h2>
+                        <p>Hotel Manager</p>
+                    </div>
+                </div>
+
+                <div class="team-card">
+                    <div class="member-img">
+                        <img src="assets/img/team/team-4.jpg" alt="">
+                    </div>
+
+                    <div class="member-detail">
+                        <h2>Ralph Nguyen</h2>
+                        <p>Room Service</p>
+                    </div>
+                </div>
+
+
+
+            </div>
 
 
 
