--- a/index.html
+++ b/index.html
@@ -647,6 +647,9 @@
 
 
     <section class="four-section">
+        <div class="design-img3">
+            <img src="assets/img/design3.png" alt="">
+        </div>
 
         <div class="hotel-menu">
 
