--- a/index.html
+++ b/index.html
@@ -800,6 +800,13 @@
                         <img src="assets/img/team/team-1.jpg" alt="">
                     </div>
 
+                    <div class="social-links">
+                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-x-twitter"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                    </div>
+
                     <div class="member-detail">
                         <h2>Michael Dean</h2>
                         <p>CEO & Founder</p>
