--- a/index.html
+++ b/index.html
@@ -818,6 +818,14 @@
                         <img src="assets/img/team/team-2.jpg" alt="">
                     </div>
 
+                    <div class="social-links">
+                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-x-twitter"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                    </div>
+
+
                     <div class="member-detail">
                         <h2>Frank Burton</h2>
                         <p>Kitchen Manager</p>
@@ -829,6 +837,14 @@
                         <img src="assets/img/team/team-3.jpg" alt="">
                     </div>
 
+                    <div class="social-links">
+                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-x-twitter"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                    </div>
+
+
                     <div class="member-detail">
                         <h2>Mya Mullins</h2>
                         <p>Hotel Manager</p>
@@ -839,6 +855,14 @@
                     <div class="member-img">
                         <img src="assets/img/team/team-4.jpg" alt="">
                     </div>
+
+                    <div class="social-links">
+                        <i class="fa-brands fa-linkedin"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-x-twitter"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                    </div>
+
 
                     <div class="member-detail">
                         <h2>Ralph Nguyen</h2>
