--- a/index.html
+++ b/index.html
@@ -924,11 +924,7 @@
                     <p>Award Winner</p>
                 </div>
 
-
-
             </div>
-
-
 
 
         </div>
@@ -936,11 +932,43 @@
 
 
 
+<!-- CONTACT US  -->
+<!-- CONTACT US  -->
+<!-- CONTACT US  -->
+<!-- CONTACT US  -->
+<!-- CONTACT US  -->
 
 
 
+        <div class="contact-cont">
+
+            <div class="contact-big-img"></div>
+
+            <div class="contact-inner-cont">
+
+                <div class="contact-box">
+
+                    <div class="contact-heading">
+                        <h1>CONTACT US</h1>
+                        <p>Get in Touch</p>
+                    </div>
 
 
+                    <div class="contact-form">
+
+                        
+
+
+                    </div>
+                </div>
+
+                <div class="contact-side-box">
+
+                </div>
+
+            </div>
+
+        </div>
 
 
 
