--- a/index.html
+++ b/index.html
@@ -941,6 +941,9 @@
 
 
         <div class="contact-cont">
+            <div class="design-img4">
+                <img src="assets/img/design4.png" alt="">
+            </div>
 
             <div class="contact-big-img"></div>
 
@@ -956,13 +959,28 @@
 
                     <div class="contact-form">
 
-                        
+                        <input type="text" placeholder="Your Name">
+                        <input type="text" placeholder="Email Adress">
+                        <input type="text" placeholder="Check In">
+                        <input type="text" placeholder="Check-Out">
 
+                        <textarea name="" id="" placeholder="Write a Message"></textarea>
 
                     </div>
+
+                    <button class="contact-form-btn"><span>CHECK AVAILABILITY</span></button>
                 </div>
 
                 <div class="contact-side-box">
+                    <div class="c-s-b-img">
+                        <img src="assets/img/call.png" alt="">
+                    </div>
+
+                    <div class="c-s-b-text">
+                        <p>call us any inquiry</p>
+                        <h1>(801) 500 50 088</h1>
+                    </div>
+
 
                 </div>
 
@@ -987,10 +1005,19 @@
 
 
 
+<!-- FOOTER -->
+<!-- FOOTER -->
+<!-- FOOTER -->
+<!-- FOOTER -->
+<!-- FOOTER -->
+
+
+    <footer class="footer">
+        
 
 
 
-
+    </footer>
 
 
 
