--- a/index.html
+++ b/index.html
@@ -1013,9 +1013,39 @@
 
 
     <footer class="footer">
-        
+
+        <div class="footer-left-side">
+            <div class="footer-logo">
+                <img src="assets/img/logo.png" alt="">
+            </div>
+
+            <div class="footer-descp">
+                <p>Feel free to reach out if you want collaborate <br> with us, or simply chat.</p>
+            </div>
+
+            <div class="footer-input">
+                <input type="email" placeholder="Email Adress">
+                <button class="footer-btn"><span><i class="fa-solid fa-paper-plane"></i></span></button>
+            </div>
+
+            <div class="footer-socialmedia">
+                <h1>Follow Us</h1>
+                <div class="link">
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-x-twitter"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                </div>
+            </div>
+        </div>
 
 
+
+        <div class="footer-right-side">
+
+
+
+        </div>
 
     </footer>
 
